--- a/app/web/template/your_chosen_identity_options.gohtml
+++ b/app/web/template/your_chosen_identity_options.gohtml
@@ -3,17 +3,15 @@
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">{{ tr .App "yourChosenDocuments" }}</h1>
+      <h1 class="govuk-heading-xl">{{ tr .App "yourChosenIdentityOptions" }}</h1>
 
-      <p class="govuk-body">{{ tr .App "yourChosenDocumentsContent" }}</p>
+      <p class="govuk-body">{{ tr .App "yourChosenIdentityOptionsContent" }}</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        {{ range .Selected }}
-          <li>{{ tr $.App .ArticleLabel }}</li>
-        {{ end }}
+        <li>{{ tr $.App .IdentityOption.ArticleLabel }}</li>
       </ul>
 
-      <p class="govuk-body">{{ trFormat .App "wellConfirmYourIdentityUsing" "FirstChoice" (tr .App .FirstChoice.Label) "SecondChoice" (tr .App .SecondChoice.Label) "DonorFirstNames" .You.FirstNames "DonorLastName" .You.LastName }}</p>
+      <p class="govuk-body">{{ tr .App "whenYouAreReadyToCompleteTheIdentityConfirmationChecks" }}</p>
 
       <form novalidate method="post">
         {{ template "continue-button" . }}
