--- a/app/web/template/witnessing_as_certificate_provider.gohtml
+++ b/app/web/template/witnessing_as_certificate_provider.gohtml
@@ -9,7 +9,7 @@
                 <div class="moj-ticket-panel">
                     <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
                         {{ $enterUniqueCodeHint := trFormat .App "enterUniqueCodeHint" "CpFirstName" .Lpa.CertificateProvider.FirstNames "DonorFullName" .Lpa.DonorFullName }}
-                        {{ template "input" (input . "witness-code" "enterUniqueCodeLabel" .Form.Code "hint" $enterUniqueCodeHint "classes" "govuk-input--width-5") }}
+                        {{ template "input" (input . "witness-code" "enterUniqueCodeLabel" .Form.Code "hint" $enterUniqueCodeHint "classes" "govuk-input--width-5" "autocomplete" "off") }}
                     </div>
                 </div>
 
