--- a/app/web/template/layout/donor-details.gohtml
+++ b/app/web/template/layout/donor-details.gohtml
@@ -7,7 +7,7 @@
         <dd class="govuk-summary-list__value">
             {{ .Lpa.You.FirstNames }} {{ .Lpa.You.LastName }}
         </dd>
-        {{ if .Lpa.YotiUserData.OK }}
+        {{ if .Lpa.IdentityConfirmed }}
             <dd class="govuk-summary-list__value">
                 <strong class="govuk-tag app-task-list__tag govuk-tag">{{ tr .App "idVerifiedTag" }}</strong>
             </dd>
