--- a/app/web/template/you_have_submitted_your_lpa.gohtml
+++ b/app/web/template/you_have_submitted_your_lpa.gohtml
@@ -3,7 +3,23 @@
 {{ define "main" }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1>You have submitted your LPA</h1>
+            <div class="govuk-panel govuk-panel--confirmation">
+                {{trHtml .App "submittedLpaHeader"}}
+            </div>
+
+            {{trHtml .App "whatHappensNextSubHeader"}}
+
+            {{trFormatHtml .App "nextStepsList" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysFullNames" .Lpa.AttorneysFullNames }}
+
+            {{trHtml .App "weWillEmailYou"}}
+
+            {{ $formattedDeadline := formatDate .Lpa.AttorneysAndCpSigningDeadline}}
+            {{ $signIn4WeeksWarning := trFormat .App "signIn4WeeksWarning" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysAndCpSigningDeadline" $formattedDeadline}}
+            {{ template "warning" (warning .App $signIn4WeeksWarning) }}
+
+            <a class="govuk-button" href="{{ link .App .App.Paths.Dashboard }}" data-module="govuk-button">
+                {{ tr $.App "continue" }}
+            </a>
         </div>
     </div>
 {{ end }}
