--- a/app/web/template/certificate_provider_details.gohtml
+++ b/app/web/template/certificate_provider_details.gohtml
@@ -18,7 +18,7 @@
 
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "context" "certificateProviderDobContext" "hint" "dateOfBirthHint") }}
 
-            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel" "boldLabel" true) }}
+            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel") }}
 
             <div class="govuk-button-group">
               {{ template "continue-button" . }}
