content tweaks to summary and limit template to 5 people

--- a/app/web/template/layout/people-to-notify-summary.gohtml
+++ b/app/web/template/layout/people-to-notify-summary.gohtml
@@ -2,6 +2,7 @@
     {{range $i, $p := .PeopleToNotify}}
         {{ $personNumber := inc $i }}
 
+        <h2 class="govuk-heading-m">Person {{ $personNumber }}</h2>
         <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row" id="name-{{ $personNumber }}">
                 <dt class="govuk-summary-list__key">
@@ -52,7 +53,7 @@
             <div class="govuk-grid-column-full">
                 <div class="app-float-right">
                     <a class="govuk-button govuk-button--secondary" href="{{ link $.App $.RemovePath }}?id={{ $p.ID }}" data-module="govuk-button">
-                        {{ trFormatHtml $.App "removePersonToNotifyButtonLink" "PersonNumber" $personNumber "FirstNames" $p.FirstNames "LastName" $p.LastName  }}
+                        {{ trFormatHtml $.App "removePersonToNotifyButtonLink" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
                     </a>
                 </div>
             </div>
