--- a/app/web/template/choose_people_to_notify_summary.gohtml
+++ b/app/web/template/choose_people_to_notify_summary.gohtml
@@ -3,7 +3,7 @@
 {{ define "main" }}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">{{ tr .App "peopleToNotifyHeader" }}</h1>
+        <h1 class="govuk-heading-xl">{{ tr .App "peopleToNotify" }}</h1>
 
         {{ trHtml .App "weCanNotifyUpTo5PeopleContent" }}
 
