--- a/app/web/template/certificate_provider_details.gohtml
+++ b/app/web/template/certificate_provider_details.gohtml
@@ -14,13 +14,12 @@
 
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
-            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "classes" "govuk-input--width-20" "type" "tel") }}
+            {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "context" "certificateProviderDobContext" "hint" "dateOfBirthHint") }}
+            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel") }}
 
-            <p class="govuk-body">{{ tr .App "certificateProviderDobHint" }}
-
-            {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
-
-            {{ template "continue-button" . }}
+            <div class="govuk-button-group">
+              {{ template "continue-button" . }}
+            </div>
           </fieldset>
         </div>
       </form>
