--- a/app/web/template/layout/input.gohtml
+++ b/app/web/template/layout/input.gohtml
@@ -1,6 +1,6 @@
 {{ define "input" }}
   <div class="govuk-form-group {{ if index .top.Errors .name }}govuk-form-group--error{{ end }}">
-    <label class="{{ if .conterxt }}govuk-heading-m{{ else }}govuk-label{{ end }}" for="f-{{ .name }}">{{ tr .top.App .label }}</label>
+    <label class="{{ if .context }}govuk-heading-m{{ else }}govuk-label{{ end }}" for="f-{{ .name }}">{{ tr .top.App .label }}</label>
     {{ if .context }}
       <p class="govuk-body">
         {{ tr .top.App .context }}
