add toggle to footer when not prod

--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -152,6 +152,18 @@
                     {{ tr .App "termsAndConditions" }}
                   </a>
                 </li>
+                <li class="govuk-footer__inline-list-item">
+                  <a class="govuk-footer__link" href="#5">
+                    {{ tr .App "termsAndConditions" }}
+                  </a>
+                </li>
+                {{ if eq false .App.IsProduction }}
+                  <li class="govuk-footer__inline-list-item">
+                    <a class="govuk-footer__link" href="{{ if containsStr "showTransKeys=1" .App.Query }}{{ .App.Page }}{{ else }}{{ .App.Page }}?showTransKeys=1{{ end }}">
+                      {{ tr .App "toggleTransKeys" }}
+                    </a>
+                  </li>
+                {{ end }}
               </ul>
 
               <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
