dynamically add description of how attorneys work together

--- a/app/web/template/do_you_want_to_notify_people.gohtml
+++ b/app/web/template/do_you_want_to_notify_people.gohtml
@@ -11,7 +11,8 @@
                 {{ trHtml .App "wantPeopleToNotifyContent" }}
 
                 {{ $lpaType := tr .App .Lpa.LpaLegalTermTransKey }}
-                {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" "ADD IN ONCE CONFIRMED WITH CONTENT"}}
+                {{ $howWorkTogether := tr .App .HowWorkTogether }}
+                {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
 
                 {{ trHtml .App "findOutMoreAboutPeopleToNotifyLink" }}
 
