Use new wording for how attorneys make decisions

--- a/app/web/template/how_should_replacement_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_replacement_attorneys_make_decisions.gohtml
@@ -53,7 +53,7 @@
 
                                 <div class="govuk-radios__conditional" id="decision-type-3-conditional-div">
                                     <div class="govuk-form-group {{ if index .Errors "mixed-details" }}govuk-form-group--error{{ end }}">
-                                        <p class="govuk--body">{{ tr .App "decisionDetailsHint" }}</p>
+                                        <p class="govuk-body">{{ tr .App "decisionDetailsHint" }}</p>
                                         <label class="govuk-label" for="mixed-details">
                                             {{ tr .App "details" }}
                                         </label>
