--- a/app/web/template/choose_people_to_notify_summary.gohtml
+++ b/app/web/template/choose_people_to_notify_summary.gohtml
@@ -13,7 +13,7 @@
             {{ template "warning" (warning .App "addedMaxPeople") }}
 
             <form novalidate method="post">
-                {{ template "input" (input . "add-person-to-notify" "" "no" "type" "hidden" )}}
+                <input type="hidden" name="add-person-to-notify" value="no">
 
                 <div class="govuk-button-group">
                     {{ template "continue-button" . }}
