Change term for pfa to property and affairs

--- a/app/web/template/layout/lpa-decisions.gohtml
+++ b/app/web/template/layout/lpa-decisions.gohtml
@@ -5,7 +5,13 @@
                 {{ tr .App "typeOfLpa" }}
             </dt>
             <dd class="govuk-summary-list__value">
-                {{ tr .App .Lpa.Type }}
+              {{ if eq .Lpa.Type "pfa" }}
+                {{ tr .App "lpaTypePfa" }}
+              {{ else if eq .Lpa.Type "hw" }}
+                {{ tr .App "lpaTypeHw" }}
+              {{ else if eq .Lpa.Type "both" }}
+                {{ tr .App "lpaTypeBoth" }}
+              {{ end }}
             </dd>
         </div>
 
