add initial CSS

--- a/app/web/assets/scss/main.scss
+++ b/app/web/assets/scss/main.scss
@@ -1,6 +1,7 @@
 /* Modernising Patterns */
 @import "patterns/task_list";
 @import "patterns/trans_switch";
+@import "patterns/progress_bar";
 
 .app-float-right {
     float: right;
