--- a/app/web/template/task_list.gohtml
+++ b/app/web/template/task_list.gohtml
@@ -9,6 +9,41 @@
 
       {{ template "details" (details . "taskListHelp" "taskListHelpContent" false) }}
 
+        <div id="progress" class="app-progress-bar" aria-label="progress-label">
+            <ol class="app-progress-bar__list">
+                <li id="progress-item-1" class="app-progress-bar__item">
+{{/*                <span class="app-progress-bar__icon {{- ' app-progress-bar__icon--complete' if item.complete }}"></span>*/}}
+                    <span class="app-progress-bar__icon"></span>
+                    <span class="app-progress-bar__label">Step 1</span>
+                </li>
+                <li id="progress-item-2" class="app-progress-bar__item" aria-current="step">
+                    {{/*                <span class="app-progress-bar__icon {{- ' app-progress-bar__icon--complete' if item.complete }}"></span>*/}}
+                    <span class="app-progress-bar__icon"></span>
+                    <span class="app-progress-bar__label">Step 2</span>
+                </li>
+                <li id="progress-item-3" class="app-progress-bar__item">
+                    {{/*                <span class="app-progress-bar__icon {{- ' app-progress-bar__icon--complete' if item.complete }}"></span>*/}}
+                    <span class="app-progress-bar__icon"></span>
+                    <span class="app-progress-bar__label">Step 3</span>
+                </li>
+                <li id="progress-item-4" class="app-progress-bar__item">
+                    {{/*                <span class="app-progress-bar__icon {{- ' app-progress-bar__icon--complete' if item.complete }}"></span>*/}}
+                    <span class="app-progress-bar__icon"></span>
+                    <span class="app-progress-bar__label">Step 4</span>
+                </li>
+                <li id="progress-item-5" class="app-progress-bar__item">
+                    {{/*                <span class="app-progress-bar__icon {{- ' app-progress-bar__icon--complete' if item.complete }}"></span>*/}}
+                    <span class="app-progress-bar__icon"></span>
+                    <span class="app-progress-bar__label">Step 5</span>
+                </li>
+                <li id="progress-item-6" class="app-progress-bar__item">
+                    {{/*                <span class="app-progress-bar__icon {{- ' app-progress-bar__icon--complete' if item.complete }}"></span>*/}}
+                    <span class="app-progress-bar__icon"></span>
+                    <span class="app-progress-bar__label">Step 6</span>
+                </li>
+            </ol>
+        </div>
+
       <ol class="app-task-list govuk-!-margin-top-0" style="position: relative;">
         {{ range $i, $e := .Sections }}
           <li>
